--- a/turtlebot3_mazesolver/package.xml
+++ b/turtlebot3_mazesolver/package.xml
@@ -13,6 +13,7 @@
   <exec_depend>turtlebot3_simulations</exec_depend>
   <exec_depend>turtlebot3_cartographer</exec_depend>
   <exec_depend>slam_toolbox</exec_depend>
+  <exec_depend>nav2_bringup</exec_depend>
   <exec_depend>multirobot_map_merge</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
