feat: added physical launch files and refactored everything

--- a/turtlebot3_mazesolver/CMakeLists.txt
+++ b/turtlebot3_mazesolver/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 
 
 install(
-  DIRECTORY launch config urdf rviz
+  DIRECTORY launch config urdf rviz worlds
   DESTINATION share/${PROJECT_NAME}
 )
 
