--- a/turtlebot3_mazesolver/CMakeLists.txt
+++ b/turtlebot3_mazesolver/CMakeLists.txt
@@ -5,11 +5,21 @@ if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
 endif()
 
+find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+
 
 install(
   DIRECTORY launch config urdf rviz worlds
   DESTINATION share/${PROJECT_NAME}
 )
 
-find_package(ament_cmake REQUIRED)
+# Install Python modules
+ament_python_install_package(${PROJECT_NAME})
+# Install Python executables
+install(PROGRAMS
+  scripts/teleop_gamepad.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 ament_package()
